--- a/biotec/public/css/welcome.css
+++ b/biotec/public/css/welcome.css
@@ -1,65 +1,127 @@
-/* author: isladjan 
-https://codepen.io/isladjan/pen/abdyPBw */
-body,
-html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-    display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-}
-
-svg {
-    display: block;
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-.scrollElement {
+@font-face {
+    font-family: 'Father Bold';
+    src: url('/fonts/FatherBold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+  }
+  body {
+    background: radial-gradient(#5b8b00, #8bcd11); /* Colores verdes para el fondo */
+    font-family: "FatherBold", sans-serif;
+  }
+  
+  .main-content {
+    max-width: 900px;
+    margin: 4em auto 0;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 3em;
+    margin: 2em 0;
+    color: #fff;
+    font-family: "FatherBold", sans-serif;
+  }
+  
+  .illustration {
+    position: relative;
+    align-self: end;
+    margin: auto;
+    height: 350px;
+    width: 350px;
+  }
+  
+  .boy,
+  .scenery,
+  .background-items,
+  .foreground-items {
     position: absolute;
-    height: 6000px;
-    width: 100px;
-    top: 0;
-    z-index: 0;
-}
-
-.btn {
-    position: fixed;
-    bottom: 5%;
-    right: 0px;
-    transform: translateX(-50%);
-    border: 1px solid #fff;
-    border-radius: 5px;
-    font-size: 0.9rem;
-    padding: 0.5rem 0.7em;
-    background-color: transparent;
-    color: #ffffff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    -webkit-font-smoothing: antialiased;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+  
+  .scenery {
+    transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+  .background-items {
+    transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 100ms;
+    top: 23px;
+  }
+  
+  .foreground-items {
+    transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 200ms;
+    bottom: 20px;
+  }
+  
+  .home-body .foreground-items {
+    margin-left: -80px;
+  }
+  
+  .outdoor-person .foreground-items {
+    margin-right: -100px;
+  }
+  
+  .boy {
+    bottom: 25px;
+    margin-right: -85px;
+    z-index: 10;
+  }
+  
+  .person-type > div {
+    transform: scale(0);
+    opacity: 0;
+  }
+  
+  .person-type.active > div {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  
+  .option-wrapper {
+    display: flex;
+    margin: 3em auto;
+    background: rgba(255, 255, 255, 0.25);
+    border-radius: 4px;
+    padding: 15px;
+    max-width: 500px;
+    font-size: 1.5em;
+    line-height: 1.5;
+  }
+  
+  .option-wrapper .option {
+    transition: all 200ms ease;
+    padding: 20px 20px 15px;
+    width: 50%;
+    border-radius: 4px;
     cursor: pointer;
-    transition: all 0.3s;
-    z-index: 11;
-}
-
-.btn_works {
-    left: 100px;
-    right: unset;
+    color: #fff;
+    z-index: 2; /* Se asegura que esté por encima */
+  }
+  
+  .option-wrapper .option.active {
+    background: #fff;
+    color: #333;
+    pointer-events: none;
+  }
+  
+  .button-group {
+    margin-top: 30px;
+  }
+  
+  .button-group a {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 25px 50px; /* Botones más grandes */
+    font-size: 1.5em; /* Texto más grande */
     text-decoration: none;
-}
-
-.btn:hover {
-    background: #ffffff;
-    color: #1b1734;
-}
+    margin: 0 10px;
+    display: inline-block;
+    z-index: 1; /* Se asegura que no interfieran con las opciones */
+  }
+  
+  .button-group a:hover {
+    background-color: #45a049;
+  }
