--- a/biotec/public/css/login.css
+++ b/biotec/public/css/login.css
@@ -1,19 +1,19 @@
 .color_fondo {
-    width: 50%;
+    width: 100%;
     height: 500px;
-    position: relative;
-    bottom: 25px;
-    left: 27%;
-    text-align: center;
+    position: relative;   
+    
     color: rgb(101, 183, 60);
     box-shadow: 1px 1px 20px rgb(20, 162, 1);
     border-radius: 0px 0px 50px 50px;
     background-color: #cbf386;
     border: none;
     font-size: 18px;
-
 }
 
+.formulario {
+    color: #88c663 
+}
 .login_css {
     color: rgb(255, 255, 255);
     padding: 20px;
@@ -60,8 +60,7 @@
 
 .login_submit {
     width: 200px;
-    position: relative;
-    right: 27%;
+    position: relative;   
     transition-duration: all 10s ease;
     background-color: rgb(141, 89, 172);
     border: none;
